Exclude gradlew files in restyled config
The configuration for restyled has been updated to exclude any gradlew files. These consisted of both 'gradlew' and 'gradlew.bat'. This action will help prevent restyled from handling these file types during its process.

--- a/.restyled.yaml
+++ b/.restyled.yaml
@@ -1,5 +1,6 @@
 enabled : true
-exclude : []
+exclude : "gradlew*"  # Exclude gradlew and gradlew.bat
+also_exclude: []
 changed_paths:
     maximum: 1000
     outcome: error
